[package]
name = "layout"
version = "0.1.0"
authors = ["shika-blyat <abdelzighem1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "0.6.1"
phf = {version = "0.8.0", features = ["macros"]}